tests/compile_fail/ktstr_test_bool_not_bool.stderr
error: expected bool literal for auto_repro
 --> tests/compile_fail/ktstr_test_bool_not_bool.rs:6:27
  |
6 | #[ktstr_test(auto_repro = 42)]
  |                           ^^

warning: unused import: `anyhow::Result`
 --> tests/compile_fail/ktstr_test_bool_not_bool.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ktstr::assert::AssertResult`
 --> tests/compile_fail/ktstr_test_bool_not_bool.rs:2:5
  |
2 | use ktstr::assert::AssertResult;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ktstr::scenario::Ctx`
 --> tests/compile_fail/ktstr_test_bool_not_bool.rs:4:5
  |
4 | use ktstr::scenario::Ctx;
  |     ^^^^^^^^^^^^^^^^^^^^
